--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -11,7 +11,7 @@ body {
     height: 100%;
 }
 html {
-    background-color: #fff;
+//  background-color: #fff;
     color: #333;              
     -webkit-user-select: none;
     user-select: none;
